RegistroCliente completo, RegistroAlqulier Modificado

--- a/src/main/webapp/registroalquiler.xhtml
+++ b/src/main/webapp/registroalquiler.xhtml
@@ -5,55 +5,28 @@
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title> Registro Alquiler </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
 </h:head>
-<h:body>
+<h:body style="background-color: gray">
     <div class="container">
         <h:form id="FormularioA">
-            <p:dataTable id="alquilerDT" var="alquiler" value="#{AlquilerItem.getCliente().rentados}" rows="10" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records" rowsPerPageTemplate="5,10,15" tableStyleClass="table table-striped table-bordered p-3 mb-2 bg-primary text-white">
-                <f:facet name="header">
-                    Items Rentados del Cliente
-                </f:facet>
-                <p:column headerText="Id">
-                    <h:outputText value="#{alquiler.item.id}"/>
-                </p:column>
-                <p:column headerText="Nombre">
-                    <h:outputText value="#{alquiler.item.nombre}"/>
-                </p:column>
-                <p:column headerText="Descripcion">
-                    <h:outputText value="#{alquiler.item.descripcion}"/>
-                </p:column>
-                <p:column headerText="Precio">
-                    <h:outputText value="#{alquiler.item.precio}"/>
-                </p:column>
-                <p:column headerText="Fecha Inicio">
-                    <h:outputText value="#{alquiler.fechainiciorenta}"/>
-                </p:column>
-                <p:column headerText="Fecha Fin">
-                    <h:outputText value="#{alquiler.fechafinrenta}"/>
-                </p:column>
-                <p:column headerText="Multa">
-                    <h:outputText value="#{AlquilerItem.consultarMulta(alquiler.item.id)}"/>
-                </p:column >
-            </p:dataTable>
             <h:panelGrid columns ="1" cellpadding="5">
                 <f:facet name="header" >
                     Registrar Item
                 </f:facet>
                 <div class="form-group">
-                    <p:outputLabel for="@next" value="Ingrese id item" />
+                    <p:outputLabel for="@next" value="Ingresar ID item" />
                     <p:inputText  id= "item" type="String" binding="#{id}"/>
                 </div>
                 <div class="form-group">
-                    <p:outputLabel for="@next" value="Ingrese el numero de días" />
+                    <p:outputLabel for="@next" value="Ingresar el numero de días" />
                     <p:inputText  id= "numdias" type="String" binding="#{dias}" />
                 </div>
                 <div class="form-group">
                     <p:outputLabel value="Costo del alquiler"/>
                     <h:outputText value="#{AlquilerItem.getCosto()}"/>
                 </div>
-                <p:commandButton update="FormularioA" value="Registrar" action="registroCliente?faces-redirect = true" actionListener="#{AlquilerItem.registrarAlquiler(id.value,dias.value)}" class="btn btn-primary" style="margin-top: 10%;"/>
-                <p:commandButton update="FormularioA" value="Consultar Costo" actionListener="#{AlquilerItem.consultarCosto(id.value,dias.value)}" class="btn btn-primary" style="margin-top: 10%;"/>
+                <p:commandButton update="FormularioA" value="Registrar" action="registroCliente?faces-redirect = true" actionListener="#{AlquilerItem.registrarAlquiler(id.value,dias.value)}" class="btn btn-primary" style="position: absolute; left: 30%; top: 40%; padding: 10px; font-family: Arial,Helvetica,sans-serif; font-size: 1em; font-weight: 600; border-radius: 10px;"/>
+                <p:commandButton update="FormularioA" value="Consultar Costo" actionListener="#{AlquilerItem.consultarCosto(id.value,dias.value)}" class="btn btn-primary" style="position: absolute; left: 45%; top: 40%; padding: 10px; font-family: Arial,Helvetica,sans-serif; font-size: 1em; font-weight: 600; border-radius: 10px;"/>
             </h:panelGrid>
         </h:form>
     </div>
